@@ -117,7 +117,7 @@ END
 
 	# fields
 	$query = <<'END';
-SELECT a.attname, t.typname, a.attnum, a.atthasdef
+SELECT a.attname, t.typname, a.attnum, a.atthasdef, a.atttypmod
 FROM pg_class c, pg_attribute a, pg_type t
 WHERE c.relname = ? AND a.attnum > 0
 AND a.attrelid = c.oid AND a.atttypid = t.oid
@@ -138,6 +138,7 @@ END
 					type => $data->[1],
 					attnum => $data->[2],
 					atthasdef => $data->[3],
+                                        atttypmod => $data->[4] 
 				};
 			}
 		}
